--- a/package.json
+++ b/package.json
@@ -1,35 +1,40 @@
 {
-  "name": "contactbook",
-  "version": "1.0.0",
-  "description": "",
-  "keywords": [],
-  "main": "src/index.js",
+  "name": "addressbook",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "bootstrap": "4.6.0",
-    "react": "17.0.2",
-    "react-datepicker": "^4.3.0",
-    "react-dom": "17.0.2",
-    "react-redux": "7.2.3",
-    "react-router-dom": "5.2.0",
-    "react-scripts": "4.0.0",
-    "react-toastify": "7.0.3",
-    "redux": "4.0.5",
-    "redux-devtools-extension": "2.13.9"
-  },
-  "devDependencies": {
-    "@babel/runtime": "7.13.8",
-    "typescript": "4.1.3"
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
+    "history": "^5.1.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^6.0.2",
+    "react-scripts": "^0.9.5",
+    "web-vitals": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
